--- a/main.html
+++ b/main.html
@@ -8,6 +8,21 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<nav>
+		<ul>
+			<li><a href="#a">Home</a></li>
+			<li><a href="#b">About us</a></li>
+			<li><a href="#c">Contact us</a></li>
+		</ul>
+	</nav>
+	<nav>
+		<h2>3 random videos</h2>
+		<ul>
+			<li><video src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" controls>Video 1</video></li>
+			<li><video src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/ForBiggerBlazes.mp4" controls>Video 2</video></li>
+			<li><video src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/SubaruOutbackOnStreetAndDirt.mp4" controls>Video 3</video></li>
+		</ul>
+	</nav>
     <script type="text/javascript" src="./script.js">
 </script>
 
