--- a/main.html
+++ b/main.html
@@ -8,6 +8,7 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<header>
 	<nav>
 		<ul>
 			<li><a href="#a">Home</a></li>
@@ -15,14 +16,23 @@
 			<li><a href="#c">Contact us</a></li>
 		</ul>
 	</nav>
-	<nav>
+	</header>	
+	<main>
 		<h2>3 random videos</h2>
-		<ul>
-			<li><video src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" controls>Video 1</video></li>
-			<li><video src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/ForBiggerBlazes.mp4" controls>Video 2</video></li>
-			<li><video src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/SubaruOutbackOnStreetAndDirt.mp4" controls>Video 3</video></li>
-		</ul>
-	</nav>
+		<video width="320" height="240" controls>
+			<source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4">
+			      Your browser does not support the video tag.
+
+		</video>
+		<video width="320" height="240" controls>
+			<source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/ForBiggerBlazes.mp4">
+			Your browser does not support the video tag.
+		</video>
+		<video width="320" height="240" controls>
+			<source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/SubaruOutbackOnStreetAndDirt.mp4">
+			your browser does not support the video tag
+		</video>
+	</main>
     <script type="text/javascript" src="./script.js">
 </script>
 
